# AdventOfCode2024

./: .gitignore  CMakeLists.txt  main.cpp
Days/: DayBase.h
Days/Template/: Advent6.cpp  Advent6.h  newData.txt
Days/five/: Advent5.cpp  Advent5.h  Data.txt
Days/four/: Advent4.cpp  Advent4.h  Data.txt
Days/one/: Advent1_1.cpp  Advent1_1.h  Data.txt
Days/six/: Advent6.cpp  Advent6.h  Data.txt
Days/three/: Advent3.cpp  Advent3.h  Data.txt
Days/two/: Advent2.cpp  Advent2.h
